src/components/_table.scss
table.x-table {
	table-layout: fixed;
	border-collapse: collapse;
	box-sizing: border-box;
	border-spacing: 0;

	&:not([class*="__txtA"]) {
		// Align
		tr {
			th,
			td {
				&:not([class*="__txtA"]) {
					text-align: left;
				}
			}
		}
	}
	&:not([class*="__txtCo"]) {
		// Color
		tr {
			td:not([class*="__txtCo"]) {
				color: color(dark, 0.7);
			}
		}
	}
	thead {
		tr {
			&:not(:first-child) {
				border-top: 2px solid transparent;
				&:after {
					content: "";
					width: calc(100% + 1rem);
					display: block;
					height: 2px;
					position: absolute;
					left: 0;
					margin-top: -2px;
					margin-left: -0.5rem;
					margin-right: -0.5rem;
					opacity: 0.2;
					background-repeat: round;
					background-position: 50% 50%;
					flex: 0 0 auto;
				}
			}
		}
	}
	tbody {
		z-index: 1;
		box-shadow: 3px 3px 9px color(dark, 0.1);
		tr {
			th,
			td {
				&:after {
					content: "";
					display: block;
					width: 100%;
					height: 100%;
					position: absolute;
					top: 0;
					left: 0;
					z-index: 0;
					pointer-events: none;
				}
				> * {
					z-index: 1;
				}
			}
		}
	}
	thead,
	tbody {
		width: 100%;
		box-sizing: border-box;
	}
	tr {
		td,
		th {
			box-sizing: border-box;
			padding: 0.7rem 1rem;
			&:empty:after {
				content: "";
				display: block;
				width: 100%;
				min-height: calc(42px - 1.4rem);
			}

			&.m__sticky {
				position: sticky;
				z-index: 2;
				background: color(light);
				left: 0;
				&:last-child {
					right: 0;
				}
			}
		}
		td {
			min-width: $minColumnSize/3;
		}
	}

	&.m__tm-dark7 {
		&:not([class*="__txtCo"]) {
			// Color
			tr {
				th:not([class*="__txtCo"]) {
					color: color(dark, 0.7);
				}
			}
		}
		tbody {
			tr {
				&:not(:first-child) {
					border-top: 2px solid color(dark, 0.1);
				}
				th:after {
					background: color(dark, 0.1);
				}
			}
		}
		thead tr:not(:first-child):after {
			background-image: var(
				--rbg,
				url("#{$ruleSvgPathX}#{str-replace(#{$dark}, '#')}' opacity='0.7#{$ruleSvgPathEnd}")
			);
		}
	}

	&.m__tm-primaryAlt {
		&:not([class*="__txtCo"]) {
			// Color
			tr {
				th:not([class*="__txtCo"]) {
					color: color(primaryAlt);
				}
			}
		}
		tbody {
			tr {
				&:not(:first-child) {
					border-top: 2px solid color(primaryAlt, 0.1);
				}
				th:after {
					background: color(primaryAlt, 0.1);
				}
			}
		}
		thead tr:not(:first-child):after {
			background-image: var(
				--rbg,
				url("#{$ruleSvgPathX}#{str-replace(#{$primaryAlt}, '#')}#{$ruleSvgPathEnd}")
			);
		}
	}

	&.m__tm-primary {
		&:not([class*="__txtCo"]) {
			// Color
			tr {
				th:not([class*="__txtCo"]) {
					color: color(primary);
				}
			}
		}
		tbody {
			tr {
				&:not(:first-child) {
					border-top: 2px solid color(primary, 0.1);
				}
				th:after {
					background: color(primary, 0.1);
				}
			}
		}
		thead tr:not(:first-child):after {
			background-image: var(
				--rbg,
				url("#{$ruleSvgPathX}#{str-replace(#{$primary}, '#')}#{$ruleSvgPathEnd}")
			);
		}
	}

	&.m__tm-danger {
		&:not([class*="__txtCo"]) {
			// Color
			tr {
				th:not([class*="__txtCo"]) {
					color: color(danger);
				}
			}
		}
		tbody {
			tr {
				&:not(:first-child) {
					border-top: 2px solid color(danger, 0.1);
				}
				th:after {
					background: color(danger, 0.1);
				}
			}
		}
		thead tr:not(:first-child):after {
			background-image: var(
				--rbg,
				url("#{$ruleSvgPathX}#{str-replace(#{$danger}, '#')}#{$ruleSvgPathEnd}")
			);
		}
	}

	&.m__tm-success {
		&:not([class*="__txtCo"]) {
			// Color
			tr {
				th:not([class*="__txtCo"]) {
					color: color(success);
				}
			}
		}
		tbody {
			tr {
				&:not(:first-child) {
					border-top: 2px solid color(success, 0.1);
				}
				th:after {
					background: color(success, 0.1);
				}
			}
		}
		thead tr:not(:first-child):after {
			background-image: var(
				--rbg,
				url("#{$ruleSvgPathX}#{str-replace(#{$success}, '#')}#{$ruleSvgPathEnd}")
			);
		}
	}

	&:not([class*="__tm"]),
	&.m__tm-secondary {
		&:not([class*="__txtCo"]) {
			// Color
			tr {
				th:not([class*="__txtCo"]) {
					color: color(secondary);
				}
			}
		}
		tbody {
			tr {
				&:not(:first-child) {
					border-top: 2px solid color(secondary, 0.1);
				}
				th:after {
					background: color(secondary, 0.1);
				}
			}
		}
		thead tr:not(:first-child):after {
			background-image: var(
				--rbg,
				url("#{$ruleSvgPathX}#{str-replace(#{$secondary}, '#')}#{$ruleSvgPathEnd}")
			);
		}
	}

	@media (max-width: $viewportMd) {
		&.m__collapseOnMobile {
			&,
			thead,
			tbody,
			th,
			td,
			tr {
				display: block;
			}
			thead {
				position: absolute;
				top: -9999px;
				left: -9999px;
			}
			tbody {
				th,
				td {
					/* Behave  like a "row" */
					// border: none;
					// border-bottom: 1px solid #eee;
					// position: relative;
					// padding-left: 50%;
					@include flexbox(row, nowrap, flex-start, center);
					&[data-column]:before {
						content: attr(data-column);
					}
					&:before {
						/* Now like a table header */
						content: "Column";
						width: 30%;
						// position: absolute;
						// /* Top/left values mimic padding */
						// top: 6px;
						// left: 6px;
						// width: 45%;
						flex: 0 0 auto;
						height: 100%;
						padding-right: 1rem;
						white-space: normal;
						overflow: hidden;
						text-overflow: ellipsis;
						@include flexbox(row, nowrap, flex-start, center);
					}
				}
				td {
				}
			}
		}
	}
}

